--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title:  R.G Navarro-Labastida homepage
-description: Oceanógrafo artesano
+title: René Gabriel Navarro Labastida homepage
+description: Oceanografía de sofa
