--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: René Gabriel Navarro Labastida homepage
 description: Oceanografía de sofa
+permalink: https://github.com/enerle/enerle.github.io/blob/main/ReneNavarro_CV.pdf
