--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: René Gabriel Navarro Labastida homepage
-description: Oceanografía de sofa (ergo: huevonazo)
+description: Oceanografía de sofa ergo huevonazo
