--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: René Gabriel Navarro Labastida
+logo: https://raw.githubusercontent.com/enerle/enerle.github.io/main/fig.jpeg
 description: Oceanografía de sofa
