--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: René Gabriel Navarro Labastida
-logo: https://raw.githubusercontent.com/enerle/enerle.github.io/main/fig.jpeg
+logo: https://raw.githubusercontent.com/enerle/enerle.github.io/main/pic1.jpeg
 description: Oceanografía de sofa
