--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: René Gabriel Navarro Labastida
 logo: https://raw.githubusercontent.com/enerle/enerle.github.io/main/pic2.jpg
-description: Oceanografía de sofa
+description: Oceanografo de sofa, entusiasta pizzaiolo e intelectualoide
