--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: René Gabriel Navarro Labastida
 logo: https://raw.githubusercontent.com/enerle/enerle.github.io/main/pic2.jpg
-description: Especialista en Oceanografía de sofá y elaboración de pizzas. Entusiaste del Acqua Frizzante
+description: Oceanografía de sofá y elaboración de pizzas. Entusiasta de los libros y del Acqua Frizzante.
