--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: René Gabriel Navarro Labastida
 logo: https://raw.githubusercontent.com/enerle/enerle.github.io/main/pic2.jpg
-description: Physical oceanographer interested in Ocean Dynamics and climate variability
+description: Physical Oceanographer interested in Ocean Dynamics and climate variability
