--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: René Gabriel Navarro Labastida
+title: René Gabriel Navarro-Labastida
 logo: https://raw.githubusercontent.com/enerle/enerle.github.io/main/pic2.jpg
-description: Physical Oceanographer interested in Ocean Dynamics and climate variability
+description: Physical Oceanography, Climate Variability, Ocean Dynamics and Ocean Modeling
