--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-minimal
 title: René Gabriel Navarro-Labastida
 logo: https://raw.githubusercontent.com/enerle/rnavarro.github.io/main/pic2.jpg
 description: Physical Oceanography, Ocean Dynamics, Ocean Modeling and Climate Variability
+![Foto](https://raw.githubusercontent.com/enerle/rnavarro/main/pic2.jpeg)
+
