--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: René Gabriel Navarro-Labastida
 logo: https://raw.githubusercontent.com/enerle/rnavarro.github.io/main/pic2.jpg
-description: Physical Oceanography, Ocean Dynamics, Ocean Modeling and Climate Variability
+description: Ocean Modeling and Climate Variability, Physical Oceanography, Ocean Dynamics
